--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ branches:
 cache:
   yarn: true
 script:
-  - git config --global user.name "${GH_NAME}"
-  - echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc
-  - cd website && yarn install && GIT_USER="${GH_NAME}" yarn run publish-gh-pages
+  #disable remove to activate# - git config --global user.name "${GH_NAME}"
+  #disable# - echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc
+  #disable# - cd website && yarn install && GIT_USER="${GH_NAME}" yarn run publish-gh-pages
