--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js:
   - '10'
+verbose : true
 branches:
   only:
     - master
@@ -8,6 +9,6 @@ cache:
   yarn: true
 script:
    - git config --global user.name "${GH_NAME}"
+   - git config --global user.email "${GH_EMAIL}"
    - echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc
-   - cd website && yarn install 
-   - GIT_USER="${GH_NAME}" yarn run publish-gh-pages
+   - cd website && yarn install && GIT_USER="${GH_NAME}" yarn run publish-gh-pages
